--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,10 @@
+body {
+  background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+}
+
+.navbar-nav {
+}
+
 .jumbotron {
   margin: 50px;
 }
@@ -8,6 +15,9 @@
 
 .profilepic {
   border-style: solid;
+  float: left;
+  margin-right: 20px;
+  margin-bottom: 20px;
 }
 
 /* need to change this in BS css, it's the "About Me" in the about me section and it's too big */
@@ -15,9 +25,9 @@
   font-size: 22;
 }
 
-/* need to find a way to wrap text and keep it in-line */
 .aboutme {
   font-size: 18px;
+  text-align: justify;
 }
 
 #footer {
