--- a/style/style.css
+++ b/style/style.css
@@ -1,16 +1,22 @@
+/* All common elements */
+
 body {
   background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
 }
 
-.navbar-nav {
-}
-
-.jumbotron {
-  margin: 50px;
+/* trying to right-align these parts of the nav bar */
+.collapse .navbar-collapse {
+  justify-content: right;
 }
 
 #footer {
-  margin: 0px;
+  margin-bottom: 0px;
+}
+
+/* index.html ONLY */
+
+.jumbotron {
+  margin: 50px;
 }
 
 .profilepic {
@@ -20,7 +26,6 @@ body {
   margin-bottom: 20px;
 }
 
-/* need to change this in BS css, it's the "About Me" in the about me section and it's too big */
 .display-4 {
   font-size: 22;
 }
@@ -33,4 +38,16 @@ body {
 #footer {
   text-align: center;
   margin-bottom: 0px;
+}
+
+/* contact.html ONLY */
+
+.form-group {
+  font-size: 18px;
+}
+
+/* portfolio.html ONLY */
+
+.portPlaceholder {
+  margin: 15px;
 }
