--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,10 @@
 
 body {
   background-image: url(https://images.pexels.com/photos/956999/milky-way-starry-sky-night-sky-star-956999.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260);
+  /* background-size: cover;
+  height: 100%;
+  overflow: hidden; */
+  
 }
 
 /* trying to right-align these parts of the nav bar - NEEDS FIXING*/
