fixed portfolio tiling

--- a/style/style.css
+++ b/style/style.css
@@ -70,3 +70,12 @@ body {
 .portfolio-card {
   font-size: 1.5em;
 }
+
+/* .card-img-top {
+  width: auto;
+  height: 250px;
+} */
+
+/* #lookLaugh {
+  wid
+} */
